default ports and names

--- a/deploy/ansible.cfg
+++ b/deploy/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 remote_port=22
-remote_user=max
-ask_pass=False
+remote_user=root
+ask_pass=True
 ask_sudo_pass=True
 gathering = smart
 fact_caching = jsonfile
